--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,17 @@ go:
   - 1.9
 
 env:
-  - GOMAXPROCS=4
+  - GOMAXPROCS=4 DEP_VERSION=0.4.1
 
-branches:
-  only:
-    - master
+before_install:
+  # Download the binary to bin folder in $GOPATH
+  - curl -L -s https://github.com/golang/dep/releases/download/v${DEP_VERSION}/dep-linux-amd64 -o $GOPATH/bin/dep
+  # Make the binary executable
+  - chmod +x $GOPATH/bin/dep
+
+install:
+  - dep ensure
 
 script:
-  - build.sh
-  - test/tests.sh
+  - ./build.sh
+  - ./test/tests.sh
